--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,8 @@
     <string name="available_items">Available Items</string>
     <string name="add_item_to_auction">Add To Auction</string>
     <string name="tag">tag</string>
+    <string name="add_item_to_bid">Add Item To Bid</string>
+    <string name="place_bid">Place Bid</string>
     <string-array name="item_array">
         <item>Clothing</item>
         <item>Books</item>
