--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,20 +5,20 @@
     <string name="profile_rating">USER RATING: %s</string>
     <string name="profile_name_display">%s %s</string>
     <string name="password">Password </string>
-    <string name="first_name">FIRST NAME: </string>
-    <string name="last_name">LAST NAME: </string>
-    <string name="grad_year">GRADUATION YEAR: </string>
-    <string name="profile_grad_year">GRADUATION YEAR: %s </string>
+    <string name="first_name">First Name </string>
+    <string name="last_name">Last Name</string>
+    <string name="grad_year">Graduation Year</string>
+    <string name="profile_grad_year">Graduation Year %s </string>
     <string name="login_button">LOGIN</string>
     <string name="register_button">REGISTER</string>
-    <string name="registration_title">PACE EXCHANGE REGISTRATION</string>
+    <string name="registration_title">Registration</string>
     <string name="logout">LOGOUT</string>
     <string name="login_title">PACE EXCHANGE LOGIN</string>
     <string name="empty_login">Please Enter A Complete User Name</string>
     <string name="empty_password">Please Enter A Complete Password</string>
     <string name="register_success">Registration Complete</string>
     <string name="register_fail">Registration Failed. Try Again.</string>
-    <string name="new_user">New User? SignUp Here.</string>
+    <string name="new_user">No account yet ? Create One</string>
     <string name="login_fail">LOGIN FAILED. PLEASE TRY AGAIN.</string>
     <string name="user_profile">USER PROFILE PORTAL</string>
     <string name="inventory_button">INVENTORY</string>
@@ -69,6 +69,10 @@
     <string name="available_items">Available Items</string>
     <string name="add_item_to_auction">Add To Auction</string>
     <string name="tag">tag</string>
+    <string name="pace_logo">PaceXchange</string>
+    <string name="delete_modal_title">Are you sure you want to Delete Item?</string>
+    <string name="delete_modal_yes">Yes</string>
+    <string name="delete_modal_no">No</string>
     <string-array name="item_array">
         <item>Clothing</item>
         <item>Books</item>
