--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,9 +75,12 @@
     <string name="delete_modal_no">No</string>
     <string name="add_item_to_bid">Add Item To Bid</string>
     <string name="place_bid">Place Bid</string>
-    <string name="time_left_for_collecting_bids">Time Left for collecting bids</string>
+    <string name="time_left_for_collecting_bids">Collecting Bids Until</string>
     <string name="my_inventory_subtitle">(Swipe Right to Delete Item)</string>
     <string name="SearchAI">Search Item AI</string>
+    <string name="my_auction_bids">My Auction Bids</string>
+    <string name="my_auction_subtitle">Swipe Right to Accept Bid</string>
+    <string name="accept_bid_modal_title">Are you sure you want to accept bid ?</string>
     <string-array name="item_array">
         <item>Clothing</item>
         <item>Books</item>
