--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="item_name">Iten Name</string>
     <string name="add_item_to_inventory">Add Item to Inventory</string>
     <string name="profile_image_uploaded">Profile Image Uploaded Successfully</string>
+    <string name="toast_bid_placed">Bid PLaced Successfully</string>
     <string-array name="item_array">
         <item>Clothing</item>
         <item>Books</item>
